Add another logging option for writing log messages in JSON format.
The "json_file" logger writes each log message in JSON format, with one
log message per line.  This format should be easier to work with than
the standard "file" logger when the logs will be fed into other
software for post-processing.

--- a/libraries/fc/CMakeLists.txt
+++ b/libraries/fc/CMakeLists.txt
@@ -242,6 +242,7 @@ if(NOT HIVE_BUILD_ON_MINIMAL_FC)
      src/log/file_appender.cpp
      src/log/gelf_appender.cpp
      src/crypto/openssl_thread_config.cpp
+     src/log/json_file_appender.cpp
      src/crypto/base32.cpp
      src/crypto/base36.cpp
      src/crypto/sha1.cpp
