Remove statsd plugin

--- a/tests/functional/python_tests/comment_payment_tests/resources/config.ini
+++ b/tests/functional/python_tests/comment_payment_tests/resources/config.ini
@@ -57,8 +57,8 @@ market-history-buckets-per-size = 5760
 # The IP address and port of a remote peer to sync with.
 p2p-seed-node =
 
-# Size to batch statsd messages.
-statsd-batchsize = 1
+# Skip rejecting transactions when account has insufficient RCs. This is not recommended.
+rc-skip-reject-not-enough-rc = 0
 
 # Block time (in epoch seconds) when to start calculating promoted content. Should be 1 week prior to current time.
 tags-start-promoted = 0
