--- a/tests/functional/python_tests/comment_payment_tests/resources/config.extended.ini
+++ b/tests/functional/python_tests/comment_payment_tests/resources/config.extended.ini
@@ -1,5 +1,5 @@
 # Appender definition json: {"appender", "stream", "file"} Can only specify a file OR a stream
-log-appender = {"appender":"stderr","stream":"std_error"} {"appender":"p2p","file":"logs/p2p/p2p.log"}
+log-appender = {"appender":"stderr","stream":"std_error"} {"appender":"p2p","file":"logs/p2p/p2p.log","time_format":"iso_8601_milliseconds"}
 
 # Logger definition json: {"name", "level", "appender"}
 log-logger = {"name":"default","level":"all","appender":"stderr"} {"name":"p2p","level":"all","appender":"p2p"}
