--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ 'ubuntu-20.04', 'ubuntu-22.04']
+        os: ['ubuntu-22.04']
         language: [ 'cpp' ]
 
     runs-on: ${{ matrix.os }}
