--- a/libraries/utilities/CMakeLists.txt
+++ b/libraries/utilities/CMakeLists.txt
@@ -15,8 +15,11 @@ endif(NOT HIVE_GIT_REVISION_DESCRIPTION)
 
 file(GLOB HEADERS "include/hive/utilities/*.hpp")
 
-set(sources
+set(sources_1
    notifications.cpp
+   ${HEADERS})
+
+set(sources_2
    benchmark_dumper.cpp
    string_escape.cpp
    tempdir.cpp
@@ -24,7 +27,12 @@ set(sources
    logging_config.cpp
    database_configuration.cpp
    io_primitives.cpp
-   ${HEADERS})
+   )
+
+set( sources ${sources_1} )
+if( NOT WASM_COMPILE_MODE)
+  list(APPEND sources ${sources_2})
+endif()
 
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/git_revision.cpp.in" "${CMAKE_CURRENT_BINARY_DIR}/git_revision.cpp" @ONLY)
 list(APPEND sources "${CMAKE_CURRENT_BINARY_DIR}/git_revision.cpp")
