Updated DeepDiff package reference (specified in tox.ini) required by HAfAH testing.

--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,8 @@ deps =
   pep8==1.7.1
   yapf==0.32.0
   tavern==2.0.0a11
-  deepdiff[murmur]==5.8.1
+  mmh3==4.0.0
+  deepdiff==6.3.0
   jsondiff==2.0.0
 
 commands = pytest {posargs}
