--- a/programs/beekeeper/beekeeper_wasm/CMakeLists.txt
+++ b/programs/beekeeper/beekeeper_wasm/CMakeLists.txt
@@ -6,7 +6,7 @@ ADD_HIVE_EXECUTABLE ( NAME beekeeper_wasm
                       beekeeper_wasm_app.cpp
                       ../core/beekeeper_wallet.cpp
                       ../core/beekeeper_wallet_manager.cpp
-                      ../core/beekeper_instance.cpp
+                      ../core/beekeeper_instance.cpp
                       ../core/token_generator.cpp
                       ../core/time_manager.cpp
                       ../core/session.cpp
