--- a/libraries/protocol/CMakeLists.txt
+++ b/libraries/protocol/CMakeLists.txt
@@ -53,27 +53,35 @@ SET( SOURCES testnet_blockchain_configuration.cpp
 cmake_policy(SET CMP0041 NEW)
 
 ## SORT .cpp by most likely to change / break compile
-add_library( hive_protocol STATIC ${SOURCES} )
 
-target_link_libraries( hive_protocol PUBLIC hive_schema_core fc_core )
+add_library( hive_protocol_minimal STATIC ${SOURCES} )
 
-target_link_libraries ( hive_protocol PUBLIC
-   $<IF:$<OR:$<STREQUAL:$<TARGET_PROPERTY:TYPE>,SHARED_LIBRARY>,$<STREQUAL:$<TARGET_PROPERTY:TYPE>,MODULE_LIBRARY>>, hive_schema_shared_boost, hive_schema>
-)
+target_link_libraries( hive_protocol_minimal PUBLIC hive_schema_minimal fc_minimal )
 
-target_link_libraries ( hive_protocol PUBLIC
-$<IF:$<OR:$<STREQUAL:$<TARGET_PROPERTY:TYPE>,SHARED_LIBRARY>,$<STREQUAL:$<TARGET_PROPERTY:TYPE>,MODULE_LIBRARY>>, fc_shared_boost, fc>
-)
-
-target_include_directories( hive_protocol
+target_include_directories( hive_protocol_minimal
                             PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" "${CMAKE_CURRENT_BINARY_DIR}/include" )
+
+# add_library( hive_protocol STATIC ${SOURCES} )
+
+# target_link_libraries( hive_protocol PUBLIC hive_schema_core fc_core )
+
+# target_link_libraries ( hive_protocol PUBLIC
+#    $<IF:$<OR:$<STREQUAL:$<TARGET_PROPERTY:TYPE>,SHARED_LIBRARY>,$<STREQUAL:$<TARGET_PROPERTY:TYPE>,MODULE_LIBRARY>>, hive_schema_shared_boost, hive_schema>
+# )
+
+# target_link_libraries ( hive_protocol PUBLIC
+# $<IF:$<OR:$<STREQUAL:$<TARGET_PROPERTY:TYPE>,SHARED_LIBRARY>,$<STREQUAL:$<TARGET_PROPERTY:TYPE>,MODULE_LIBRARY>>, fc_shared_boost, fc>
+# )
+
+# target_include_directories( hive_protocol
+#                             PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" "${CMAKE_CURRENT_BINARY_DIR}/include" )
 
 if( CLANG_TIDY_EXE )
    set_target_properties( hive_protocol PROPERTIES CXX_CLANG_TIDY "${DO_CLANG_TIDY}" )
 endif( CLANG_TIDY_EXE )
 
 INSTALL( TARGETS
-   hive_protocol
+   hive_protocol_minimal
 
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
