--- a/libraries/schema/CMakeLists.txt
+++ b/libraries/schema/CMakeLists.txt
@@ -1,29 +1,34 @@
 file(GLOB HEADERS "include/hive/schema/*.hpp")
-add_library( hive_schema_core STATIC schema.cpp ${HEADERS} )
-target_include_directories( hive_schema_core PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
-target_link_libraries( hive_schema_core PUBLIC fc_core )
+add_library( hive_schema_minimal STATIC schema.cpp ${HEADERS} )
+target_include_directories( hive_schema_minimal PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
+target_link_libraries( hive_schema_minimal PUBLIC fc_minimal )
 
-add_library( hive_schema INTERFACE )
-target_link_libraries( hive_schema INTERFACE hive_schema_core fc )
+# file(GLOB HEADERS "include/hive/schema/*.hpp")
+# add_library( hive_schema_core STATIC schema.cpp ${HEADERS} )
+# target_include_directories( hive_schema_core PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
+# target_link_libraries( hive_schema_core PUBLIC fc_core )
 
-add_library( hive_schema_shared_boost INTERFACE )
+# add_library( hive_schema INTERFACE )
+# target_link_libraries( hive_schema INTERFACE hive_schema_core fc )
 
-target_link_libraries( hive_schema_shared_boost INTERFACE hive_schema_core fc_shared_boost )
+# add_library( hive_schema_shared_boost INTERFACE )
 
-install( TARGETS
-   hive_schema
+# target_link_libraries( hive_schema_shared_boost INTERFACE hive_schema_core fc_shared_boost )
 
-   RUNTIME DESTINATION bin
-   LIBRARY DESTINATION lib
-   ARCHIVE DESTINATION lib
-)
+# install( TARGETS
+#    hive_schema
 
-install( TARGETS
-   hive_schema_shared_boost
+#    RUNTIME DESTINATION bin
+#    LIBRARY DESTINATION lib
+#    ARCHIVE DESTINATION lib
+# )
 
-   RUNTIME DESTINATION bin
-   LIBRARY DESTINATION lib
-   ARCHIVE DESTINATION lib
-)
+# install( TARGETS
+#    hive_schema_shared_boost
 
-install( FILES ${HEADERS} DESTINATION "include/hive/schema" )
+#    RUNTIME DESTINATION bin
+#    LIBRARY DESTINATION lib
+#    ARCHIVE DESTINATION lib
+# )
+
+# install( FILES ${HEADERS} DESTINATION "include/hive/schema" )
