Create WASM API - doesn't compile, because lack of symbol: `vtable for boost::detail::thread_data_base`

--- a/programs/beekeeper/beekeeper_wasm/CMakeLists.txt
+++ b/programs/beekeeper/beekeeper_wasm/CMakeLists.txt
@@ -1,12 +1,17 @@
-
 PROJECT( BeekeeperWASM )
+cmake_minimum_required( VERSION 3.22.1 )
 
-CMAKE_MINIMUM_REQUIRED( VERSION 3.22.1 )
+set( CMAKE_CXX_STANDARD 17 )
+set( CMAKE_CXX_EXTENSIONS OFF )
+set( CMAKE_CXX_STANDARD_REQUIRED ON )
 
-SET(CMAKE_CXX_STANDARD 17)
+set( CMAKE_C_STANDARD 99 )
+set( CMAKE_C_STANDARD_REQUIRED ON )
+
+cmake_policy(SET CMP0057 NEW)
 
 ADD_SUBDIRECTORY( beekeeper_wasm_core )
 
-ADD_EXECUTABLE( beekeeper_wasm main.cpp )
+ADD_EXECUTABLE( beekeeper_wasm beekeeper_wasm_api.cpp )
 
 TARGET_LINK_LIBRARIES( beekeeper_wasm PRIVATE beekeeper_wasm_core )
