--- a/libraries/fc/CMakeLists.txt
+++ b/libraries/fc/CMakeLists.txt
@@ -163,6 +163,7 @@ set( fc_sources
      src/shared_ptr.cpp
      src/time.cpp
      src/utf8.cpp
+     src/io/stdio_impl.cpp
      src/io/iostream.cpp
      src/io/datastream.cpp
      src/io/buffered_iostream.cpp
