WASM beekeeper doesn't use second thread so as to check if a session expired

--- a/programs/beekeeper/beekeeper/CMakeLists.txt
+++ b/programs/beekeeper/beekeeper/CMakeLists.txt
@@ -9,11 +9,12 @@ ADD_HIVE_EXECUTABLE ( NAME beekeeper
                       beekeeper_instance.cpp
                       session.cpp
                       session_manager.cpp
+                      time_manager.cpp
                       ../core/beekeeper_wallet_manager.cpp
                       ../core/beekeeper_wallet_api.cpp
                       ../core/beekeeper_wallet.cpp
                       ../core/token_generator.cpp
-                      ../core/time_manager.cpp
+                      ../core/time_manager_base.cpp
                       ../core/session_base.cpp
                       ../core/session_manager_base.cpp
                       ../core/wallet_manager_impl.cpp
