--- a/programs/beekeeper/lite_beekeeper/CMakeLists.txt
+++ b/programs/beekeeper/lite_beekeeper/CMakeLists.txt
@@ -22,7 +22,7 @@ ADD_EXECUTABLE( lite_beekeeper
                       ../core/beekeeper_wallet.cpp
                       ../core/beekeeper_wallet_manager.cpp
                       ../core/token_generator.cpp
-                      ../core/time_manager.cpp
+                      ../core/time_manager_base.cpp
                       ../core/session_base.cpp
                       ../core/session_manager_base.cpp
                       ../core/wallet_manager_impl.cpp
